<resources>
    <string name="app_name">魔耳英语学生</string>
    <string name="search">搜索</string>
    <string name="select">选择</string>
    <string name="tv_submit">提交</string>
    <string name="submiting">提交中</string>
    <string name="edit">编辑</string>
    <string name="prompt">提示</string>
    <string name="create">新建</string>
    <string name="all">全部</string>
    <string name="btn_on">关闭</string>
    <string name="tab_homework">作业</string>
    <string name="tab_study">自学</string>
    <string name="choicebook">选择教材</string>
    <string name="tab_chat">沟通</string>
    <string name="tab_class">班级</string>
    <string name="tab_mine">我的</string>
    <string name="task_done">已完成</string>
    <string name="task_staydone">待完成</string>
    <string name="task_staycorrect">待批改</string>
    <string name="AnswerCard">答题卡</string>
    <string-array name="spinner_adapter">
        <item>全部</item>
        <item>作业</item>
        <item>通知</item>
        <item>学生管理</item>
        <item>资料</item>
        <item>微课</item>
        <item>测评</item>
        <item>班级相册</item>
        <item>教学研究</item>
        
    </string-array>
    <string name="nothing">现在没有待办事项\n休息一下吧~</string>
    <string name="num">(%s)</string>
    <string name="clean_notice">"清空通知"</string>
    <string name="notice_details">通知详情</string>
    <string name="class_notice">班级\n通知</string>
    <string name="school_notice">校园\n通知</string>
    <string name="system_notice">系统\n通知</string>
    <string name="notice_msg_ok">确定已经了解通知内容了吗？</string>
    <string name="chat_list">通讯录</string>
    <string name="chat_concact_no">暂无通讯录</string>
    <string name="text_teaching_material">我的教材</string>
    <string name="text_wrong_book">错题本</string>
    <string name="text_report">学情报告</string>
    <string name="text_set_up">设置</string>
    <string name="text_security">账户安全</string>
    <string name="text_about">关于魔耳</string>
    <string name="btn_exit">退出登录</string>
    <string name="btn_exitclass">退出班级</string>
    <string name="user_message">个人信息</string>
    <string name="img_message">图片信息</string>
    <string name="mine_class_space">班级空间</string>
    <string name="mine_textbook_audio">课本剧配音</string>
    <string name="mine_cara">卡拉OK</string>
    <string name="login_edit">是否要退出登录？</string>
    <string name="homeworkdetails">作业详情</string>
    <string name="checkhomework">检查作业</string>
    <string name="login">登录</string>
    <string name="sendcode">发送验证码</string>
    <string name="input_user">手机号码</string>
    <string name="input_birth">出生日期</string>
    <string name="input_pwd">6-15位字母数字符号组合密码</string>
    <string name="tv_regist">新学员注册</string>
    <string name="tv_registok">注册</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="inputnickname">请输入昵称</string>
    <string name="nickname">昵称</string>
    <string name="username">用户名</string>
    <string name="email">邮  箱</string>
    <string name="inputemail">请输入邮箱</string>
    <string name="inputebirth">出生日期</string>
    <string name="emailerror">电子邮箱格式不正确</string>
    <string name="registok">注册成功</string>
    <string name="class_num">上课班级数%s</string>
    <string name="classnum">上课班级数</string>
    <string name="apptitle">魔耳英语</string>
    <string name="forget_sure">确认</string>
    <string name="forget_user">输入手机号码</string>
    <string name="login_account">登录账号</string>
    <string name="input_login_account">请输入登录账号</string>
    <string name="phone_num">手机号码</string>
    <string name="input_phone_num">请输入手机号码</string>
    <string name="phone_code">验证码</string>
    <string name="newpwdagin">请再次输入新密码</string>
    <string name="pwd_two_error">两次密码不匹配，请重新输入</string>
    <string name="class_attence">考勤</string>
    <string name="class_attenceDetail">考勤详情</string>
    <string name="my_class">我的班级</string>
    <string name="class_details">班级详情</string>
    <string name="class_lesson">班级详情</string>
    <string name="lesson_details">课次详情</string>
    <string name="text_class2"><![CDATA[已上课<font color=\'#50D2C2\'>%1$s</font>/%2$s]]></string>
    <string name="tv_overlesson">已上完</string>
    <string name="tv_lesson">已上%1$s次课 共%2$s次课</string>
    <string name="class_code">班级码</string>
    <string name="tv_student">学生</string>
    <string name="tv_attence">考勤</string>
    <string name="tv_photo">相册</string>
    <string name="text_lesson">课次</string>
    <string name="tv_opinion">评价教师</string>
    <string name="tv_data">资料</string>
    <string name="tv_practice">随堂练</string>
    <string name="tv_homework">课后作业</string>
    <string name="tv_lessonNum">%s题</string>
    <string name="tv_call">点名</string>
    <string name="tv_endTime">截至时间%s</string>
    <string name="title_paper">做作业</string>
    <string name="tv_paper">%1$s人未交</string>
    <string name="answer_show">显示答案</string>
    <string name="answer_public">公布答案</string>
    <string name="submit_success">提交成功</string>
    <string name="title_dianming">点名</string>
    <string name="attence">考勤</string>
    <string name="tv_chuqin">出勤：%s</string>
    <string name="tvkuangke">旷课：%s</string>
    <string name="tvQingjia">请假：%s</string>
    <string name="tvTingke">停课：%s</string>
    <string name="tvCallroll">第%1$s次课 %2$s</string>
    <string name="tvShouldNum">应到：%s</string>
    <string name="text_ask">请假</string>
    <string name="text_truan">旷课</string>
    <string name="text_atten">出勤</string>
    <string name="discipline">纪律性：</string>
    <string name="takeinit">主动性：</string>
    <string name="active">活跃性：</string>
    <string name="opinion_ok">评价：</string>
    <string name="tv_opinion_ok">评价成功</string>
    <string name="teaching_attitute">教学态度：</string>
    <string name="teaching_lever">教学水平：</string>
    <string name="class_atmosphere">上课氛围：</string>
    <string name="teaching_pertinence">教学针对性：</string>
    <string name="shart">分享</string>
    <string name="down">下载</string>
    <string name="delete">删除</string>
    <string name="details">查看详情...</string>
    <string name="up_photo">上传照片</string>
    <string name="create_album">新建相册</string>
    <string name="set_album">修改相册</string>
    <string name="text_pingjia">评论(%s)</string>
    <string name="fraction">%.1f分</string>
    <string name="score_rate">得分率：%.1f%%</string>
    <string name="reply"><![CDATA[%1$s回复<font color=\'#57D4C4\'>%2$s</font>:]]></string>
    <string name="send">发送</string>
    <string name="hint_eval">发表评论</string>
    <string name="comments">评论</string>
    <string name="class_album">相册</string>
    <string name="hint_album_name">相册名字不能为空</string>
    <string name="hint_comments_text">请输入评论内容</string>
    <string name="hint_delete_photo">是否要删除照片？</string>
    <string name="hint_down_photo">是否要下载照片？</string>
    <string name="hint_down_ok">下载成功</string>
    <string name="file_img_update">全部文件%1$s 上传成功%2$s 失败%3$s</string>
    <string name="file_num">正在上传第%s张</string>
    <string name="update_text">%s张图片上传失败。是否重新上传？</string>
    <string name="album_input">请输入相册名称</string>
    <string name="research">教研</string>
    <string name="title_course">微课</string>
    <string name="tit_html_wk">%s-微课</string>
    <string name="text_class1">知识点:%1$s\n视　频:%2$s\n练　习:%3$s</string>
    <string name="title_test">做测评</string>
    <string name="test_undone">未完成</string>
    <string name="test_done">已完成</string>
    <string name="test_no_answer">未答题</string>
    <string name="test_answer">已答题</string>
    <string name="my_data">我的资料</string>
    <string name="name">名称</string>
    <string name="date">日期</string>
    <string name="type">类型</string>
    <string name="source">来源</string>
    <string name="subject">学科</string>
    <string name="remove">清除选项</string>
    <string name="screening">筛选</string>
    <string name="switch_show">切换\n显示</string>
    <string name="move">移动</string>
    <string name="move_msg">移动成功</string>
    <string name="cancel_share">取消分享</string>
    <string name="file_null">当前文件夹中没有文件</string>
    <string name="tyle_data_null">类型分类不存在</string>
    <string name="subject_data_null">学科分类不存在</string>
    <string name="source_data_null">来源分类不存在</string>
    <string name="prompt_delete">确定要删除么？</string>
    <string name="title_audit_class">审核学生</string>
    <string name="title_sq_class">班级申请</string>
    <string name="audit_class">加入班级</string>
    <string name="audit_time">申请加入时间</string>
    <string name="audit">申请加入</string>
    <string name="audit_parent">家长信息</string>
    <string name="btn_agreed">同意</string>
    <string name="btn_refused">拒绝</string>
    <string name="tv_auditok">审核成功</string>
    <string name="re_apply">确定要重新提交申请吗？</string>
    <string name="addclass">加入班级</string>
    <string name="btn_cancle">取消</string>
    <string name="btn_takephone">拍照</string>
    <string name="btn_album">相册</string>
    <string name="tv_user_icon">头像</string>
    <string name="tv_user_account">帐号</string>
    <string name="tv_user_pwd">密码</string>
    <string name="tv_user_phone">手机号</string>
    <string name="tv_user_name">姓名</string>
    <string name="edit_phone">修改手机号</string>
    <string name="edit_user">修改帐号</string>
    <string name="edit_pwd">修改密码</string>
    <string name="code">验证码</string>
    <string name="old_phone">原手机号</string>
    <string name="new_phone">新手机号</string>
    <string name="getcode">获取验证码</string>
    <string name="inputcode">短信验证码</string>
    <string name="correct_phone">手机号输入错误</string>
    <string name="pwderror">密码输错</string>
    <string name="old_user">原帐号</string>
    <string name="new_user">新帐号</string>
    <string name="inputnewuser">请输入新帐号</string>
    <string name="inputnewpwd">请输入新密码</string>
    <string name="inputnewphonw">请输入新手机号</string>
    <string name="loginpwd">登录密码</string>
    <string name="input_regit_phone">手机号码</string>
    <string name="old_pwd">原密码</string>
    <string name="new_pwd">新密码</string>
    <string name="inputoldpwd">请输入原密码</string>
    <string name="pwd_instru">6-16位字符,推荐使用字母加数字组合</string>
    <string name="pwd_ok">确认密码</string>
    <string name="inputpwdto">请确认密码</string>
    <string name="pwd_length">建议密码长度6-16位</string>
    <string name="hint_inputcode">验证码已发送，请注意查收</string>
    <string name="save_ok">修改成功</string>
    <string name="text_oldnewpwd">新手机号和原手机号相同，无法修改</string>
    <string name="text_oldnewuser">新帐号和原帐号相同，无法修改</string>
    <string name="text_oldnewpwd1">新密码两次输入不匹配，请重新输入</string>
    <string name="click_birth">请点击选择生日</string>
    <string name="no_chinese">密码不允许含有中文</string>
    <string name="correct_pwd">密码长度只能为6-16位</string>
    <string name="input_text_code">请输入验证码</string>
    <string name="textquest_op">是否提交答案？</string>
    <string name="textquest">答案录入</string>
    <string name="myworks">我的作品</string>
    <string name="text_notice">魔耳通知</string>
    <string name="mine_text_about">关于魔耳</string>
    <string name="mine_class_info">班级信息</string>
    <string name="mine_notice">魔耳通知</string>
    <string name="mine_notice_detial">通知详情</string>
    <string name="mine_clear">清空</string>
    <string name="mine_setting">设置</string>
    <string name="mine_text_userphone">修改手机号</string>
    <string name="mine_text_fixpass">修改密码</string>
    <string name="mine_text_clean">清除缓存</string>
    <string name="homework_img">homework_img</string>
    <string name="homework_line">homework_line</string>
    <string name="show_pointleft">show_pointleft</string>
    <string name="show_pointright">show_pointright</string>
    <string name="btnRecord">开始录音</string>
    <string name="StartRecord">开始录音</string>
    <string name="hello">Hello</string>
    <string name="btnPred">段落评测</string>
    <string name="btnWord">单词评测</string>
    <string name="btnsent">句子评测</string>
    <string name="result">评测结果</string>
    <string name="replay">回放录音</string>
    <string name="btnNext">下一场景</string>
    <string name="tvSentRec">Suppose you are in a StarBucks store, the waiter asked:\"How can I help you\".\nYou should response:\nA:I need a pair of size 8 shoe.\nB: I need a cup of coffe.\nC:I need fried chicken wings and chips.\nD: I need a ticket for \"The lord of the Ring\"</string>
</resources>