<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/old_phone"
            android:textColor="@color/color5A"
            android:textSize="@dimen/text18"/>


        <TextView
            android:id="@+id/old_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center"
            android:textColor="@color/gray"
            android:textSize="@dimen/text16"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/app_bg_a"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_user_pwd"
            android:textColor="@color/color5A"
            android:textSize="@dimen/text18"/>


        <EditText
            android:id="@+id/edPwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="right|center"
            android:hint="@string/input_pwd"
            android:textColor="@color/gray"
            android:textSize="@dimen/text16"
            android:singleLine="true"
            android:ellipsize="end"
            android:password="true"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/app_bg_a"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/new_phone"
            android:textColor="@color/color5A"
            android:textSize="@dimen/text18"/>


        <EditText
            android:id="@+id/newPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="right|center"
            android:hint="@string/inputnewphonw"
            android:textColor="@color/gray"
            android:textSize="@dimen/text16"
            android:singleLine="true"
            android:ellipsize="end"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/app_bg_a"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_marginLeft="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/code"
            android:textColor="@color/color5A"
            android:textSize="@dimen/text18"/>


        <EditText
            android:id="@+id/editcode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="right|center"
            android:hint="@string/inputcode"
            android:textColor="@color/gray"
            android:textSize="@dimen/text16"
            android:singleLine="true"
            android:ellipsize="end"
            />
        <TextView
            android:layout_marginRight="4dp"
            android:id="@+id/tv_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/whilte_gray"
            android:gravity="center"
            android:layout_marginLeft="4dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="@dimen/text13"
            android:text="@string/getcode"
            android:textColor="@color/white" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/app_bg_a"
        />
</LinearLayout>