<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/old_pwd"
            android:textColor="@color/color5A"
            android:textSize="@dimen/text18"/>


        <EditText
            android:id="@+id/edOldPwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="right|center"
            android:hint="@string/inputoldpwd"
            android:textColor="@color/gray"
            android:textSize="@dimen/text16"
            android:singleLine="true"
            android:ellipsize="end"
            android:password="true"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/app_bg_a"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/new_pwd"
            android:textColor="@color/color5A"
            android:textSize="@dimen/text18"/>


        <EditText
            android:id="@+id/ednewPwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="right|center"
            android:hint="@string/pwd_instru"
            android:textColor="@color/gray"
            android:textSize="@dimen/text16"
            android:singleLine="true"
            android:ellipsize="end"
            android:password="true"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/app_bg_a"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/pwd_ok"
            android:textColor="@color/color5A"
            android:textSize="@dimen/text18"/>


        <EditText
            android:id="@+id/edToopwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="right|center"
            android:hint="@string/inputpwdto"
            android:textColor="@color/gray"
            android:textSize="@dimen/text16"
            android:singleLine="true"
            android:ellipsize="end"
            android:password="true"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/app_bg_a"
        />

</LinearLayout>