<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="14dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/old_user"
                android:textColor="@color/color5A"
                android:textSize="@dimen/text18"/>


            <TextView
                android:id="@+id/old_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|center"
                android:textColor="@color/gray"
                android:textSize="@dimen/text16"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/app_bg_a"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="14dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/new_user"
                android:textColor="@color/color5A"
                android:textSize="@dimen/text18"/>


            <EditText
                android:id="@+id/edUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:ellipsize="end"
                android:gravity="right|center"
                android:hint="@string/inputnewuser"
                android:singleLine="true"
                android:textColor="@color/gray"
                android:textSize="@dimen/text16"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/app_bg_a"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="14dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/loginpwd"
                android:textColor="@color/color5A"
                android:textSize="@dimen/text18"/>


            <EditText
                android:id="@+id/edPwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:ellipsize="end"
                android:gravity="right|center"
                android:hint="@string/input_pwd"
                android:password="true"
                android:singleLine="true"
                android:textColor="@color/gray"
                android:textSize="@dimen/text16"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/app_bg_a"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="14dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tv_user_phone"
                android:textColor="@color/color5A"
                android:textSize="@dimen/text18"/>


            <EditText
                android:id="@+id/edPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:ellipsize="end"
                android:gravity="right|center"
                android:hint="@string/input_regit_phone"
                android:singleLine="true"
                android:textColor="@color/gray"
                android:textSize="@dimen/text16"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/app_bg_a"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:gravity="center"
                android:text="@string/code"
                android:textColor="@color/color5A"
                android:textSize="@dimen/text18"/>


            <EditText
                android:id="@+id/editcode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:ellipsize="end"
                android:gravity="right|center"
                android:hint="@string/inputcode"
                android:singleLine="true"
                android:textColor="@color/gray"
                android:textSize="@dimen/text16"
                />

            <TextView
                android:id="@+id/tv_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@color/whilte_gray"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="8dp"
                android:text="@string/getcode"
                android:textColor="@color/white"
                android:textSize="@dimen/text13"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/app_bg_a"
            />
    </LinearLayout>
</ScrollView>